Revert URI changes